# spotify-mcp

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  smithery.yaml
src/spotify_mcp/: __init__.py  errors.py  fastmcp_server.py  server.py  spotify_api.py  utils.py
tests/: __init__.py  conftest.py  test_errors.py  test_fastmcp_tools.py  test_notifications.py  test_prompts.py  test_resources.py  test_server.py  test_spotify_api.py  test_utils.py
